--- a/src/app/component/products/body-root/body-root.component.html
+++ b/src/app/component/products/body-root/body-root.component.html
@@ -16,21 +16,6 @@
     <source [src]="'assets/videos/background_shoe_web.mp4'"
             type="video/mp4">
   </video>
- <!-- <div class="content-main"
-     [ngClass]="{
-       'size-card-content&#45;&#45;original': (contentService.contentStatus$ | async),
-       'size-card-content-change': !(contentService.contentStatus$ | async)
-    }">
-    <div class="container-card-item"
-    >
-      <div class="card card-item" *ngFor="let i of [1,2,3,4,5, 6, 7, 8, 9, 10]">
-        <img class="card-img-top">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-        </div>
-      </div>
-    </div>
-  </div>-->
-  <app-product-carousel>
-  </app-product-carousel>
+<!--  <app-product-list-pc></app-product-list-pc>-->
+  <app-product-carousel></app-product-carousel>
 </div>
