--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="form-login" *ngIf="!adminStatus">
+<div class="form-login" *ngIf="!(this.adminService.adminStatus$ |async)">
   <div class="title-login">
     <img src="../../../assets/images/icon.png" alt="ICON NOT FOUND">
   </div>
