--- a/src/app/component/products/body-root/body-root.component.html
+++ b/src/app/component/products/body-root/body-root.component.html
@@ -16,6 +16,6 @@
     <source [src]="'assets/videos/background_shoe_web.mp4'"
             type="video/mp4">
   </video>
-<!--  <app-product-list-pc></app-product-list-pc>-->
   <app-product-carousel></app-product-carousel>
+  <app-product-list-pc></app-product-list-pc>
 </div>
