--- a/src/app/component/products/product-list-pc/product-list-pc.component.html
+++ b/src/app/component/products/product-list-pc/product-list-pc.component.html
@@ -1,15 +1,90 @@
- <div class="content-main"
-    [ngClass]="{
+<div class="content-main"
+     [ngClass]="{
       'size-card-content-original-pc': (contentService.contentStatus$ | async),
       'size-card-content-change-pc': !(contentService.contentStatus$ | async)
    }">
-   <div class="container-card-item"
-   >
-     <div class="card card-item" *ngFor="let i of [1,2,3,4,5, 6, 7, 8, 9, 10]">
-       <img class="card-img-top">
-       <div class="card-body">
-         <h5 class="card-title">Card title</h5>
-       </div>
-     </div>
-   </div>
- </div>
+  <div class="container-card-item row">
+    <div class="col-12">
+      <ng-content></ng-content>
+    </div>
+    <div class="col-12 wrap-banner">
+      <iframe
+        src="https://cf.shopee.vn/file/9c078b39474a7b12a33c380ab7ccf1d8_xxhdpi"
+        allowtransparency="true"
+        class="banner-ads"
+        scrolling="no"
+      >
+      </iframe>
+    </div>
+    <div class="card" *ngFor="let i of [1,2,3,4,5, 6, 7, 8, 9, 10]">
+      <div class="view-buy-products">
+        <span>View: 10</span>
+        <span>Buy: 9</span>
+      </div>
+      <div class="card-img-top-products">
+        <img src="../../../../assets/images/carousel-image-default.png" alt="Image not found">
+      </div>
+      <div class="card-body">
+          <div class="content-card" gdAreas="name name name|size valueSize valueSize|color valueColor valueColor|price valuePrice valuePrice|brand valueBrand valueBrand">
+            <!--Name-->
+            <div gdArea="name" class="products-name">
+              <span>Shoes Nike Nike Nike Nike Nike Nike Nike Nike</span>
+            </div>
+            <!--Size-->
+            <div gdArea="size">
+              <span>Size:</span>
+            </div>
+            <div gdArea="valueSize">
+                <span *ngFor="let numberSize of [36, 37, 38, 39, 40]">
+                    {{numberSize}}
+                </span>
+            </div>
+            <!-- Color -->
+            <div gdArea="color">
+              Color:
+            </div>
+            <div gdArea="valueColor" class="products-color">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="color" value="black">
+                    <span class="swatch" style="background-color:#222"></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="color" value="blue">
+                    <span class="swatch" style="background-color:#6e8cd5"></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="color" value="green">
+                    <span class="swatch" style="background-color:#44c28d"></span>
+                  </label>
+                </li>
+              </ul>
+            </div>
+            <!--Price-->
+            <div gdArea="price">
+              <span>Size:</span>
+            </div>
+            <div gdArea="valuePrice">
+                <span>
+                  22,453$
+                </span>
+            </div>
+            <!---->
+            <div gdArea="brand">
+              <span>Brand:</span>
+            </div>
+            <div gdArea="valueBrand">
+                <span>
+                  Nike
+                </span>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
