--- a/src/app/component/products/product-list-pc/product-list-pc.component.scss
+++ b/src/app/component/products/product-list-pc/product-list-pc.component.scss
@@ -1,13 +1,28 @@
 .content-main {
-  position: fixed;
-  height: 45vh;
-  top: 50vh;
-  width: 90vw;
-  margin: auto;
-  padding: 1rem;
   display: flex;
   justify-content: center;
+  position: fixed;
+  height: 100vh;
+  width: 90vw;
+  margin: auto;
+  padding: 1rem 1rem 15rem 1rem;
   overflow: auto;
+  top: 6vh;
+
+  .col-12 {
+    padding-right: 0.9vw;
+    padding-left: 0.9vw;
+    margin-bottom: 0.5rem;
+  }
+
+  .wrap-banner {
+    .banner-ads {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      border: 0;
+    }
+  }
 
   .container-card-item {
     margin: auto;
@@ -24,6 +39,80 @@
     width: 18%;
     height: 35vh;
     margin: auto auto 1rem auto;
+    border-radius: 0;
+
+    .view-buy-products {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 0.1rem;
+      font-size: 0.5rem;
+    }
+
+    .card-img-top-products {
+      height: 40%;
+      border-bottom: 1px solid gray;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+
+      img {
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .card-body {
+      padding: 0.2rem;
+
+      .products-name {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-weight: bold;
+      }
+
+      .products-color ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .products-color li {
+        margin: 0 0.2rem 0 0;
+        display: inline-block;
+      }
+
+      .products-color label {
+        cursor: pointer;
+        margin-bottom: 0;
+      }
+
+      .products-color input {
+        display: none;
+      }
+
+      .products-color input[type="radio"]:checked + .swatch {
+        box-shadow: inset 0 0 0 0.2rem white;
+      }
+
+      .swatch {
+        display: inline-block;
+        vertical-align: middle;
+        height: 0.7rem;
+        width: 0.7rem;
+        margin: 0 0.05rem 0 0;
+        border: 0.1rem solid #d4d4d4;
+      }
+
+      .content-card {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 0;
+        margin-right: 0;
+        font-size: 0.55rem;
+        text-align: left;
+      }
+    }
   }
 
   .card:hover {
@@ -35,7 +124,7 @@
 
   @media only screen and (max-width: 767px) {
     .card {
-      width: 40% !important;
+      width: 40vw !important;
     }
   }
 }
@@ -46,4 +135,18 @@
 
 .size-card-content-original-pc {
   width: 90vw !important;
+}
+
+::-webkit-scrollbar {
+  width: 0
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: gainsboro;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
 }
