--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,7 +1,10 @@
 <div id="header-root" class="header-root">
   <header>
     <div>
-      <h4>HELLO - SHOP</h4>
+      <div class="header-content">
+        <img src="../../../assets/logo/mv_store.png" >
+        <app-find></app-find>
+      </div>
     </div>
   </header>
 </div>
