--- a/src/app/component/products/product-carousel/product-carousel.component.html
+++ b/src/app/component/products/product-carousel/product-carousel.component.html
@@ -5,36 +5,42 @@
 >
   <div class="item" *ngFor="let image of [1,2,3,4,5,6,7,8,9,10];let i = index">
     <div class="card">
-      <div class="row">
-        <div class="col-12 view-buy">
+      <div class="card-img-top-carousel" gdAreas="header|image">
+        <div class="view-buy-carousel" gdArea="header">
           <span>View: 10</span>
           <span>Buy: 9</span>
         </div>
-      </div>
-      <div class="card-img-top">
-        <img src="../../../../assets/images/carousel-image-default.png" alt="Image not found">
+        <div gdArea="image">
+          <img src="../../../../assets/images/carousel-image-default.png" alt="Image not found">
+        </div>
       </div>
       <div class="card-body">
-        <div class="row">
-          <div class="col-12">
+        <div class="content-card" gdAreas="
+            name name name|
+            size valueSize valueSize|
+            color valueColor valueColor|
+            price valuePrice valuePrice|
+            brand valueBrand valueBrand"
+             gdGap="2vh"
+        >
+          <!--Name-->
+          <div gdArea="name" class="products-name">
             <span>Shoes Nike Nike Nike Nike Nike Nike Nike Nike</span>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            Size:
+          <!--Size-->
+          <div gdArea="size">
+            <span>Size:</span>
           </div>
-          <div class="col-9">
+          <div gdArea="valueSize">
                 <span *ngFor="let numberSize of [36, 37, 38, 39, 40]">
                     {{numberSize}}
                 </span>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
+          <!-- Color -->
+          <div gdArea="color">
             Color:
           </div>
-          <div class="col-9 colors">
+          <div gdArea="valueColor" class="products-color">
             <ul>
               <li>
                 <label>
@@ -56,25 +62,27 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            Price:
+          <!--Price-->
+          <div gdArea="price">
+            <span>Price:</span>
           </div>
-          <div class="col-9">
-            23,453$
+          <div gdArea="valuePrice">
+                <span>
+                  22,453$
+                </span>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            Brand:
+          <!--Brand-->
+          <div gdArea="brand">
+            <span>Brand:</span>
           </div>
-          <div class="col-9">
-            Nike
+          <div gdArea="valueBrand">
+                <span>
+                  Nike
+                </span>
           </div>
         </div>
       </div>
-      <div>
+      <div  class="card-footer">
         <div class="rate">
           <input type="radio" id="star5_item5" name="rate" value="5"/>
           <label for="star5" title="text">5 stars</label>
