--- a/src/app/component/products/product-carousel/product-carousel.component.scss
+++ b/src/app/component/products/product-carousel/product-carousel.component.scss
@@ -1,9 +1,7 @@
 ::ng-deep .owl-carousel {
   margin-bottom: 2rem;
-  height: auto;
   .owl-prev, .owl-next {
     position: absolute;
-    z-index: 10000;
     border-radius: 0;
     font-family: 'Libre Franklin', sans-serif;
     text-transform: uppercase;
@@ -42,170 +40,8 @@
   .owl-next {
     right: 0;
   }
-  .card {
-    box-shadow: 1px 1px 5px #ccc;
-    border-radius: 0;
-    .row {
-      padding-left: 0;
-      padding-right: 0;
-      margin-left: 0;
-      margin-right: 0;
-      font-size: 0.55rem;
-      text-align: left;
 
-      .col-3 {
-        padding-left: 0.1rem;
-        padding-right: 0;
-      }
-
-      .col-9 {
-        padding-left: 0;
-        padding-right: 0;
-      }
-
-      .col-12 {
-        padding-left: 0.1rem;
-        padding-right: 0;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        font-weight: bold;
-      }
-
-      .view-buy {
-        display: flex;
-        justify-content: space-between;
-        padding-right: 0.1rem;
-        font-size: 0.5rem;
-      }
-
-      .colors ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      .colors li {
-        margin: 0 0.2rem 0 0;
-        display: inline-block;
-      }
-
-      .colors label {
-        cursor: pointer;
-        margin-bottom: 0;
-      }
-
-      .colors input {
-        display: none;
-      }
-
-      .colors input[type="radio"]:checked + .swatch {
-        box-shadow: inset 0 0 0 0.2rem white;
-      }
-
-      .swatch {
-        display: inline-block;
-        vertical-align: middle;
-        height: 0.7rem;
-        width: 0.7rem;
-        margin: 0 0.05rem 0 0;
-        border: 0.1rem solid #d4d4d4;
-      }
-    }
-
-    .card-img-top {
-      height: 40%;
-      border-bottom: 1px solid gray;
-
-      img {
-        height: 100%;
-        object-fit: contain;
-      }
-    }
-
-    .rate {
-      height: 100%;
-      background-color: #fff;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: auto;
-      border-top: 1px solid lightgray;
-
-      label {
-        margin: 0;
-      }
-    }
-
-    .rate:not(:checked) > input {
-      position: absolute;
-      top: -9999px;
-    }
-
-    .rate:not(:checked) > label {
-      float: right;
-      width: 1em;
-      overflow: hidden;
-      white-space: nowrap;
-      cursor: pointer;
-      font-size: 1.5rem;
-      color: burlywood;
-    }
-
-    .rate:not(:checked) > label:before {
-      content: ' ★ ';
-      padding-left: 0.3vw
-    }
-
-    .rate > input:checked ~ label {
-      color: #ffc700;
-    }
-
-    .rate:not(:checked) > label:hover,
-    .rate:not(:checked) > label:hover ~ label {
-      color: #deb217;
-    }
-
-    .rate > input:checked + label:hover,
-    .rate > input:checked + label:hover ~ label,
-    .rate > input:checked ~ label:hover,
-    .rate > input:checked ~ label:hover ~ label,
-    .rate > label:hover ~ input:checked ~ label {
-      color: #c59b08;
-    }
-  }
-
-  .card:hover {
-    transform: scale(1.005);
-    box-shadow: 8px 8px 5px linear-gradient(-180deg, #f53d2d, #f63);
-  }
-
-
-  .card-body {
-    background: #fff;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-
-    .a {
-      display: inline-block;
-      border-radius: 100%;
-    }
-
-    .a.orange {
-      background: #f35e3d;
-    }
-
-    .a.green {
-      background: #11e95b;
-    }
-
-    .a.yellow {
-      background: #ffd414;
-    }
-  }
-
+  @import "product-carousel-card.component";
 
   @media only screen and (max-width: 728px) {
     .owl-carousel {
@@ -235,5 +71,4 @@
     padding: 0 !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
-
 }
