--- a/src/app/component/products/product-list/product-list.component.html
+++ b/src/app/component/products/product-list/product-list.component.html
@@ -8,24 +8,27 @@
       <ng-content></ng-content>
     </div>
     <div class="col-12 wrap-banner">
-      <iframe
-        src="https://cf.shopee.vn/file/9c078b39474a7b12a33c380ab7ccf1d8_xxhdpi"
-        allowtransparency="true"
-        class="banner-ads"
-        scrolling="no"
-      >
-      </iframe>
+      <img src="https://cf.shopee.vn/file/9c078b39474a7b12a33c380ab7ccf1d8_xxhdpi">
     </div>
     <div class="card" *ngFor="let i of [1,2,3,4,5, 6, 7, 8, 9, 10]">
-      <div class="view-buy-products">
-        <span>View: 10</span>
-        <span>Buy: 9</span>
-      </div>
-      <div class="card-img-top-products">
-        <img src="../../../../assets/images/carousel-image-default.png" alt="Image not found">
+      <div class="card-img-top-products" gdAreas="header|image">
+        <div class="view-buy-products" gdArea="header">
+          <span>View: 10</span>
+          <span>Buy: 9</span>
+        </div>
+        <div gdArea="image">
+          <img src="../../../../assets/images/carousel-image-default.png" alt="Image not found">
+        </div>
       </div>
       <div class="card-body">
-          <div class="content-card" gdAreas="name name name|size valueSize valueSize|color valueColor valueColor|price valuePrice valuePrice|brand valueBrand valueBrand">
+          <div class="content-card" gdAreas="
+            name name name|
+            size valueSize valueSize|
+            color valueColor valueColor|
+            price valuePrice valuePrice|
+            brand valueBrand valueBrand"
+            gdGap="2vh"
+          >
             <!--Name-->
             <div gdArea="name" class="products-name">
               <span>Shoes Nike Nike Nike Nike Nike Nike Nike Nike</span>
@@ -67,14 +70,14 @@
             </div>
             <!--Price-->
             <div gdArea="price">
-              <span>Size:</span>
+              <span>Price:</span>
             </div>
             <div gdArea="valuePrice">
                 <span>
                   22,453$
                 </span>
             </div>
-            <!---->
+            <!--Brand-->
             <div gdArea="brand">
               <span>Brand:</span>
             </div>
@@ -84,6 +87,20 @@
                 </span>
             </div>
           </div>
+        </div>
+      <div  class="card-footer">
+        <div class="rate">
+          <input type="radio" id="star5_item5" name="rate" value="5"/>
+          <label for="star5" title="text">5 stars</label>
+          <input type="radio" id="star4_item5" name="rate" value="4"/>
+          <label for="star4" title="text">4 stars</label>
+          <input type="radio" id="star3_item5" name="rate" value="3"/>
+          <label for="star3" title="text">3 stars</label>
+          <input type="radio" id="star2_item5" name="rate" value="2"/>
+          <label for="star2" title="text">2 stars</label>
+          <input type="radio" id="star1_item5" name="rate" value="1"/>
+          <label for="star1" title="text">1 star</label>
+        </div>
       </div>
     </div>
   </div>
