--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -1,9 +1,9 @@
 .header-root {
   margin: 0;
-  height: 6vh;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  min-height: 10vh;
 
   header {
     width: 100%;
@@ -13,26 +13,28 @@
     justify-content: flex-start;
     border-bottom: 0.1rem solid #6c757d;
 
+
     div {
       height: 100%;
       position: relative;
 
       h4 {
         margin: 0;
-        height: 100%;
+        min-height: 10vh;
         display: flex;
         position: relative;
         align-items: center;
       }
     }
   }
+  @import "./scss/header.component";
 }
 
 .body-root {
   margin: 0;
   display: flex;
   min-width: 100%;
-  min-height: 88vh;
+  max-height: 82vh;
   flex-direction: row;
 
   @font-face {
@@ -43,6 +45,150 @@
   * {
     box-sizing: border-box;
   }
+
+  .card {
+    width: 18%;
+    position: relative;
+    margin: auto auto 1rem auto;
+    border-radius: 0;
+
+    .view-buy-products {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 0.1rem;
+      font-size: 0.5rem;
+    }
+
+    .card-img-top-products {
+      border-bottom: 1px solid gray;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
+    }
+
+    .card-body {
+      padding: 0.2rem;
+      .products-name {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-weight: bold;
+      }
+
+      .products-color ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .products-color li {
+        margin: 0 0.2rem 0 0;
+        display: inline-block;
+      }
+
+      .products-color label {
+        cursor: pointer;
+        margin-bottom: 0;
+      }
+
+      .products-color input {
+        display: none;
+      }
+
+      .products-color input[type="radio"]:checked + .swatch {
+        box-shadow: inset 0 0 0 0.2rem white;
+      }
+
+      .swatch {
+        display: inline-block;
+        vertical-align: middle;
+        height: 0.7rem;
+        width: 0.7rem;
+        margin: 0 0.05rem 0 0;
+        border: 0.1rem solid #d4d4d4;
+      }
+
+      .content-card {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 0;
+        margin-right: 0;
+        font-size: x-small;
+        text-align: left;
+      }
+    }
+
+    .card-footer {
+      padding: 0;
+    }
+
+    .rate {
+      height: 100%;
+      background-color: #fff;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      border-top: 1px solid lightgray;
+      label {
+        margin: 0;
+      }
+    }
+
+    .rate:not(:checked) > input {
+      position: absolute;
+      top: -9999px;
+    }
+
+    .rate:not(:checked) > label {
+      float: right;
+      width: 1em;
+      overflow: hidden;
+      white-space: nowrap;
+      cursor: pointer;
+      font-size: 1.5rem;
+      color: burlywood;
+    }
+
+    .rate:not(:checked) > label:before {
+      content: ' ★ ';
+      padding-left: 0.3vw
+    }
+
+    .rate > input:checked ~ label {
+      color: #ffc700;
+    }
+
+    .rate:not(:checked) > label:hover,
+    .rate:not(:checked) > label:hover ~ label {
+      color: #deb217;
+    }
+    .rate > input:checked + label:hover,
+    .rate > input:checked + label:hover ~ label,
+    .rate > input:checked ~ label:hover,
+    .rate > input:checked ~ label:hover ~ label,
+    .rate > label:hover ~ input:checked ~ label {
+      color: #c59b08;
+    }
+  }
+
+  .card:hover {
+    transform: scale(1.1);
+    border: 1px solid #f63;
+    box-shadow: 8px 8px 5px linear-gradient(-180deg, #f53d2d, #f63);
+  }
+
+  @media only screen and (max-width: 767px) {
+    .card {
+      width: 40vw !important;
+    }
+  }
 }
 
 
@@ -50,11 +196,11 @@
 
 .footer-root {
   margin: 0;
-  height: 6vh;
+  min-height: 10vh;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  z-index: 10000;
+  z-index: 3;
 
   footer {
     width: 100%;
@@ -66,10 +212,10 @@
     div {
       height: 100%;
       position: relative;
-
+      background-color: #fff;
       h4 {
         margin: 0;
-        height: 100%;
+        min-height: 10vh;
         display: flex;
         position: relative;
         align-items: center;
