--- a/src/app/component/products/find/find.component.html
+++ b/src/app/component/products/find/find.component.html
@@ -1,8 +1,12 @@
-<div class="search-header">
-  <input type="search">
-  <button>
-    <span></span> Search
-  </button>
+<div class="search-header row">
+  <div class="col-10">
+    <input type="search">
+  </div>
+  <div class="col-2">
+    <button>
+      Search
+    </button>
+  </div>
 </div>
 
 
