--- a/src/app/component/products/menu-left/menu-left.component.html
+++ b/src/app/component/products/menu-left/menu-left.component.html
@@ -10,14 +10,74 @@
                (click)="openNav()"
                [ngClass]="{
                 'display-menu-left': !arrowStatus
-               }">
+               }"
+               *ngIf="!(testMobileService.testMobileStatus$ | async)"
+          >
           <img class="right" [src]="'assets/icon/double_right.png'"
                (click)="openNav()"
                [ngClass]="{
                  'display-menu-left': arrowStatus
-               }">
+               }"
+               *ngIf="!(testMobileService.testMobileStatus$ | async)"
+          >
       </span>
     <div id="mySideNav" class="side-nav-left">
+      <div gdAreas="shopping-cart | category | truck" gdGap="1rem"
+           [ngClass]="{
+            'size-menu-left-change': !arrowStatus,
+            'size-menu-left-original': arrowStatus,
+            'center-item-menu': true
+            }">
+        <!---->
+        <div gdArea="shopping-cart">
+          <div class="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-cart2 col-12" viewBox="0 0 16 16"
+            >
+              <path
+                  d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+            </svg>
+            <b class="col-12" [ngClass]="{
+                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
+               }">
+              Giỏ hàng
+            </b>
+          </div>
+        </div>
+        <!---->
+        <div gdArea="category">
+          <div class="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-cart2 col-12" viewBox="0 0 16 16"
+            >
+              <path
+                  d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
+            </svg>
+            <b class="col-12" [ngClass]="{
+                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
+               }">
+              Loại sản phẩm
+            </b>
+          </div>
+        </div>
+        <!---->
+        <div gdArea="truck">
+          <div class="row">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-cart2 col-12" viewBox="0 0 16 16"
+            >
+              <path
+                  d="M11.5 4a.5.5 0 0 1 .5.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-4 0 1 1 0 0 1-1-1v-1h11V4.5a.5.5 0 0 1 .5-.5zM3 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm1.732 0h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4a2 2 0 0 1 1.732 1z"/>
+            </svg>
+            <b class="col-12" [ngClass]="{
+                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
+               }">
+              Vận chuyển
+            </b>
+          </div>
+        </div>
+        <!---->
+      </div>
     </div>
   </div>
 </div>
