--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,22 +1,34 @@
 <div id="header-root" class="header-root">
   <header>
-    <div>
-      <div class="header-content">
-        <img src="../../../assets/logo/mv_store.png" >
-        <app-find></app-find>
+    <div class="header-content" [ngClass]="{
+              'overwrite-header-content': (testMobileService.testMobileStatus$ | async)
+          }">
+      <div class="row">
+        <div class="col-10" *ngIf="!(testMobileService.testMobileStatus$  | async)">
+          <app-find></app-find>
+        </div>
+        <div [ngClass]="
+              (testMobileService.testMobileStatus$ | async) ? 'col-12' : 'col-2'
+          ">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+               class="bi bi-cart2" viewBox="0 0 16 16"
+          >
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>          </svg>
+        </div>
       </div>
     </div>
   </header>
 </div>
 
 <div id="body-root" class="body-root">
-  <app-menu-left></app-menu-left>
+  <app-menu-left class="menu-left-root"></app-menu-left>
   <app-body-root></app-body-root>
 </div>
-<div id="footer-root"  class="footer-root">
+<!--<div id="footerRoot"  class="footer-root">
   <footer>
-    <div>
-      <h4>HELLO - SHOP</h4>
+    <div class="footer-content" [ngStyle]="{height: heightFooter}">
+      Hello
     </div>
   </footer>
-</div>
+</div>-->
