--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -3,8 +3,6 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  min-height: 10vh;
-
   header {
     width: 100%;
     height: 100%;
@@ -12,20 +10,7 @@
     position: relative;
     justify-content: flex-start;
     border-bottom: 0.1rem solid #6c757d;
-
-
-    div {
-      height: 100%;
-      position: relative;
-
-      h4 {
-        margin: 0;
-        min-height: 10vh;
-        display: flex;
-        position: relative;
-        align-items: center;
-      }
-    }
+    z-index: 3;
   }
   @import "./scss/header.component";
 }
@@ -34,7 +19,7 @@
   margin: 0;
   display: flex;
   min-width: 100%;
-  max-height: 82vh;
+  max-height: 100vh;
   flex-direction: row;
 
   @font-face {
@@ -196,11 +181,9 @@
 
 .footer-root {
   margin: 0;
-  min-height: 10vh;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  z-index: 3;
 
   footer {
     width: 100%;
@@ -208,18 +191,17 @@
     color: #000000;
     position: relative;
     border-top: 0.1rem solid #6c757d;
-
-    div {
-      height: 100%;
-      position: relative;
-      background-color: #fff;
-      h4 {
-        margin: 0;
-        min-height: 10vh;
-        display: flex;
-        position: relative;
-        align-items: center;
-      }
-    }
+    z-index: 3;
   }
+
+  @import "./scss/footer.component";
+}
+
+.menu-left-root {
+  transition: transform .2s cubic-bezier(.4,0,.2,1),-webkit-transform .2s;
+  background: linear-gradient(-180deg,#FFF, #FFF);
+}
+
+.overwrite-header-content {
+  justify-content: flex-end !important;
 }
