--- a/src/app/component/products/scss/header.component.scss
+++ b/src/app/component/products/scss/header.component.scss
@@ -1,13 +1,17 @@
 .header-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  z-index: 3;
   background-color: #fff;
-  img {
-    height: 10vh;
-    width: auto;
-  }
   background-image: url("../../../../assets/banner/My Post.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 10vh;
+  width: 100vw;
+  .row {
+    text-align: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
 
 }
