--- a/src/app/component/products/product-list/product-list.component.html
+++ b/src/app/component/products/product-list/product-list.component.html
@@ -1,17 +1,17 @@
 <div class="content-main"
      [ngClass]="{
-      'size-card-content-original-pc': (contentService.contentStatus$ | async),
-      'size-card-content-change-pc': !(contentService.contentStatus$ | async)
+      'size-content-original': (contentService.contentStatus$ | async),
+      'size-content-change': !(contentService.contentStatus$ | async)
    }">
     <div class="container-card-item row">
         <div class="col-12">
-            <ng-content></ng-content>
+            <app-product-carousel></app-product-carousel>
         </div>
         <div class="col-12 wrap-banner">
             <img src="https://cf.shopee.vn/file/9c078b39474a7b12a33c380ab7ccf1d8_xxhdpi">
         </div>
-        <div class="card" *ngFor="let i of [1,2,3,4,5, 6, 7, 8, 9, 10]">
-            <div class="card-img-top-products" gdAreas="header|image">
+        <div class="card" *ngFor="let idProduct of [1,2,3,4,5, 6, 7, 8, 9, 10]">
+            <div class="card-img-top-products" gdAreas="{{girdAreasHeader}}">
                 <div class="view-buy-products" gdArea="header">
                     <span>View: 10</span>
                     <span>Buy: 9</span>
@@ -21,13 +21,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <div class="content-card" gdAreas="
-            name name name|
-            size valueSize valueSize|
-            color valueColor valueColor|
-            price valuePrice valuePrice|
-            brand valueBrand valueBrand"
-                     gdGap="1.5vh"
+                <div class="content-card" gdAreas="{{girdAreasBody}}"
+                     gdGap="1.5vh 0"
                 >
                     <!--Name-->
                     <div gdArea="name" class="products-name">
@@ -38,9 +33,9 @@
                         <span>Size:</span>
                     </div>
                     <div gdArea="valueSize">
-                <span *ngFor="let numberSize of [36, 37, 38, 39, 40]">
-                    {{numberSize}}
-                </span>
+                        <span *ngFor="let numberSize of [36, 37, 38, 39, 40]">
+                            {{numberSize}}
+                        </span>
                     </div>
                     <!-- Color -->
                     <div gdArea="color">
@@ -73,18 +68,21 @@
                         <span>Price:</span>
                     </div>
                     <div gdArea="valuePrice">
-                <span>
-                  22,453$
-                </span>
+                        <span>
+                            22,453$
+                        </span>
                     </div>
                     <!--Brand-->
                     <div gdArea="brand">
                         <span>Brand:</span>
                     </div>
                     <div gdArea="valueBrand">
-                <span>
-                  Nike
-                </span>
+                        <div class="element-buy-products">
+                            <span>
+                                Nike
+                            </span>
+                            <app-button-buy [idProduct]="idProduct"></app-button-buy>
+                        </div>
                     </div>
                 </div>
             </div>
