--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -23,7 +23,9 @@
 
 <div id="body-root" class="body-root">
   <app-menu-left class="menu-left-root"></app-menu-left>
-  <app-body-root></app-body-root>
+  <app-body-root>
+    <router-outlet></router-outlet>
+  </app-body-root>
 </div>
 <!--<div id="footerRoot"  class="footer-root">
   <footer>
